[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "kubengine"
description = "Kubernetes Engine Platform."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "duanzt", email = "duanziteng@gmail.com" }]
version = "0.1.0"
keywords = ["kubernetes", "devops", "automation", "kylin"]
classifiers = [
  "License :: Apache-2.0 License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "fastapi>=0.121.3",
  "uvicorn>=0.38.0",
  "pyinfra>=3.5.1",
  "asyncssh>=2.21.1",
  "python-multipart>=0.0.20",
  "PyYAML>=6.0.3",
  "requests>=2.32.5",
  "jwt>=1.4.0",
  "sqlalchemy>=2.0.45",
  "websockets>=15.0.1",
  "kubernetes>=34.1.0",
  "rich>=14.3.1",
  "toml>=0.10.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.1",
  "pytest-asyncio>=1.3.0",
  "httpx>=0.28.1",
  "black>=23.1.0",
  "flake8>=6.0.0",
  "mypy>=1.0.0",
  "isort>=5.12.0",
  "pydocstyle>=6.3.0",
  "pre-commit>=3.0.4"
]

[project.entry-points."image_builders"]
kylin-v11 = "builder.image.os.kylin_v11:Builder"
kubectl = "builder.image.kubectl.builder:Builder"
os-shell = "builder.image.os_shell.builder:Builder"
redis = "builder.image.redis.builder:RedisBuilder"
redis-sentinel = "builder.image.redis.builder:SentinelBuilder"
redis-exporter = "builder.image.redis.exporter_builder:Builder"

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true  # 忽略缺失的导入类型（比如第三方库无类型注解）
warn_no_return = false
warn_unused_ignores = false

[tool.pydocstyle]
convention = "google"
